[package]
name = "paypal"
version = "0.2.0"
authors = ["nikos <nikos@mugsoft.io>"]
edition = "2018"
description = "A library to communicate with paypal api"
license = "MIT"
repository = "https://github.com/nikosEfthias/paypal"

[dependencies]
reqwest = "0.9.18"
serde = { version = "1.0.99", features = ["derive"] }
serde_json = "1.0.40"
base64 = "0.10.1"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
dotenv = "0.14.1"
lazy_static = "1.4.0" 

[features]
default = []
test-mode = []
